--- a/.github/workflows/update_data.yml
+++ b/.github/workflows/update_data.yml
@@ -12,43 +12,98 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Calculate Intelligence Index
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.9'
+
+      - name: Fetch and Analyze Real Time Data
         run: |
-          # Vi skapar en viktad simulering för "Inlägg senaste timmen"
-          # Detta ger en mycket mer realistisk kurva för fakemake.se
+          # Vi skapar ett Python-script som hämtar datan och kollar klockan
+          cat <<EOF > analyzer.py
+          import urllib.request
+          import json
+          import datetime
+          from xml.dom import minidom
+          import time
+          import random
+
+          # Vi går via AllOrigins för att komma runt blockeringen
+          url = "https://api.allorigins.win/get?url=https://truthsocial.com/@realDonaldTrump.rss"
           
-          ROLL=$(( RANDOM % 100 ))
-          
-          if [ $ROLL -lt 60 ]; then
-            # 60% chans för tystnad (0 inlägg)
-            COUNT=0
-            STATUS="calm"
-          elif [ $ROLL -lt 85 ]; then
-            # 25% chans för normal aktivitet (1-2 inlägg)
-            COUNT=$(( ( RANDOM % 2 ) + 1 ))
-            STATUS="normal"
-          elif [ $ROLL -lt 95 ]; then
-            # 10% chans för hög aktivitet (3-4 inlägg)
-            COUNT=$(( ( RANDOM % 2 ) + 3 ))
-            STATUS="high"
-          else
-            # 5% chans för TOTAL MELTDOWN (5-9 inlägg)
-            COUNT=$(( ( RANDOM % 5 ) + 5 ))
-            STATUS="meltdown"
-          fi
-          
-          # Hämta tid och skapa JSON
-          TIMESTAMP=$(date -u)
-          echo "Simulering: $STATUS ($COUNT inlägg/h)"
-          
-          # Vi sparar detta som data.json
-          # Notera: "status": "estimated" eftersom vi kör på vår algoritm
-          echo "{\"postCount\": $COUNT, \"activityLevel\": \"$STATUS\", \"status\": \"estimated\", \"lastUpdated\": \"$TIMESTAMP\"}" > data.json
+          post_count_last_hour = 0
+          status = "simulated" # Default om vi misslyckas
+
+          try:
+              # 1. Hämta datan
+              response = urllib.request.urlopen(url, timeout=10)
+              data = json.loads(response.read())
+              rss_content = data['contents']
+              
+              # 2. Läs RSS-XML
+              dom = minidom.parseString(rss_content)
+              items = dom.getElementsByTagName('item')
+              
+              # 3. Kolla tiden nu (UTC)
+              now = datetime.datetime.utcnow()
+              print(f"Nuvarande tid (UTC): {now}")
+              
+              real_count = 0
+              
+              for item in items:
+                  # Hämta datumet för inlägget
+                  pub_date_str = item.getElementsByTagName('pubDate')[0].firstChild.data
+                  # Formatet är oftast: "Fri, 09 Feb 2026 10:00:00 GMT"
+                  # Vi parsar detta
+                  try:
+                      # Försök tolka datumet
+                      pub_date = datetime.datetime.strptime(pub_date_str, "%a, %d %b %Y %H:%M:%S %Z")
+                  except:
+                      # Fallback om tidszonen strular (tar bort +0000 etc)
+                      pub_date = datetime.datetime.strptime(pub_date_str[:25], "%a, %d %b %Y %H:%M:%S")
+
+                  # Räkna skillnaden i tid
+                  diff = now - pub_date
+                  diff_minutes = diff.total_seconds() / 60
+                  
+                  print(f"Inlägg från: {pub_date} ({int(diff_minutes)} minuter sedan)")
+                  
+                  if diff_minutes < 60:
+                      real_count += 1
+
+              # Om vi kom hit utan fel så har vi en ÄKTA siffra
+              post_count_last_hour = real_count
+              status = "live"
+              print(f"SUCCESS: Hittade {real_count} inlägg senaste timmen.")
+
+          except Exception as e:
+              print(f"FEL VID HÄMTNING: {e}")
+              # Om hämtningen misslyckas, kör vi vår simulerings-algoritm (Viktad slump)
+              roll = random.randint(0, 100)
+              if roll < 60: post_count_last_hour = 0
+              elif roll < 85: post_count_last_hour = random.randint(1, 2)
+              elif roll < 95: post_count_last_hour = random.randint(3, 4)
+              else: post_count_last_hour = random.randint(5, 9)
+              status = "estimated"
+
+          # Spara till JSON
+          output = {
+              "postCount": post_count_last_hour,
+              "status": status,
+              "lastUpdated": datetime.datetime.utcnow().strftime("%Y-%m-%d %H:%M:%S UTC")
+          }
+
+          with open('data.json', 'w') as f:
+              json.dump(output, f)
+          EOF
+
+          # Kör analysen
+          python analyzer.py
 
       - name: Commit and Push
         run: |
           git config user.name "github-actions"
           git config user.email "action@github.com"
           git add data.json
-          git commit -m "Intelligence Update: $STATUS ($COUNT posts/h)" || exit 0
+          git commit -m "Real-time Intelligence Analysis" || exit 0
           git push
